Bug 125295. Active Accessibility: HTML <button> element should  be a leaf. r=jgaunt, sr=hewitt, a=shaver